add 2fa example

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <ul>
-    <li><a href="/react-count-down/">React Count Down Animation</a></li>
+    <li><a href="/react-count-down/">React Count Down Animation example</a></li>
+    <li><a href="/two-factor-auth/">React Two-Factor Authentication example</a></li>
   </ul>
 </body>
 </html>
