--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <ul>
-    <li><a href="/react-count-down/">React Count Down Animation example</a></li>
-    <li><a href="/two-factor-auth/">React Two-Factor Authentication example</a></li>
-    <li><a href="/canvas-game/">Canvas Game example</a></li>
-    <li><a href="/html5-game/">HTML5 Game example</a></li>
-  </ul>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.d29c66c2.js"></script><link href="/static/css/main.880c6249.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
